--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -75,5 +75,34 @@
     "start_createPalette_gen_title": "Ny utifrån generator",
     "start_createPalette_gen_subtitle": "Använd generatorfunktioner för att generera ett färgschema",
     "start_createPalette_img_title": "Ny från bild",
-    "start_createPalette_img_subtitle": "Använd en bild som källa till ett färgschema"
+    "start_createPalette_img_subtitle": "Använd en bild som källa till ett färgschema",
+
+    "start_deletePalettes": "Ta bort vald färgscheman",
+    "palette_subtitle": "Dina sparade färgscheman",
+    "palette_colors_add": "Lägg till en färg",
+    "palette_colors_remove": "Ta bort valda färger",
+    "palette_colors_promote": "Gör om valda genererade färger till fasta färger",
+    "palette_colors_remove_harmonies": "Ta bort harmonier från valda färger",
+    "palette_color_hue": "Ton",
+    "palette_color_sat": "Mättnad",
+    "palette_color_lig": "Ljus",
+    "palette_color_luma": "Luma",
+    "palette_colors_show_preview": "Visa helskärmsförhandsgranskning av färgschemats färger",
+    "info_title": "",
+    "info_subtitle": "",
+    "info_palettes_title": "",
+    "info_palettes_create_intro": "",
+    "info_palettes_create_tpl": "",
+    "info_palettes_create_gen": "",
+    "info_palettes_create_img": "",
+    "info_colors_title": "",
+    "info_colors_intro": "",
+    "info_colors_palette_title": "",
+    "info_colors_palette": "",
+    "info_colors_generated_title": "",
+    "info_colors_generated": "",
+    "info_colors_helpers_intro": "",
+    "info_colors_helpers_contrast": "",
+    "info_colors_helpers_compare": "",
+    "info_colors_helpers_css": ""
 }
