Add sv translation

--- a/lib/l10n/app_sv.arb
+++ b/lib/l10n/app_sv.arb
@@ -88,21 +88,22 @@
     "palette_color_lig": "Ljus",
     "palette_color_luma": "Luma",
     "palette_colors_show_preview": "Visa helskärmsförhandsgranskning av färgschemats färger",
-    "info_title": "",
-    "info_subtitle": "",
-    "info_palettes_title": "",
-    "info_palettes_create_intro": "",
-    "info_palettes_create_tpl": "",
-    "info_palettes_create_gen": "",
-    "info_palettes_create_img": "",
-    "info_colors_title": "",
-    "info_colors_intro": "",
-    "info_colors_palette_title": "",
-    "info_colors_palette": "",
-    "info_colors_generated_title": "",
-    "info_colors_generated": "",
-    "info_colors_helpers_intro": "",
-    "info_colors_helpers_contrast": "",
-    "info_colors_helpers_compare": "",
-    "info_colors_helpers_css": ""
+    "info_title": "Hjälp",
+    "info_subtitle": "Tips och tricks",
+    "info_palettes_title": "Färgscheman",
+    "info_palettes_create_intro": 
+        "Det finns tre sätt att skapa färgscheman i KLR:",
+    "info_palettes_create_tpl": "Med hjälp av KLRs grundtema, som slumpgenererar en färg och sen skapar ytterligare fyra färger, där varje färgs ton är roterad 40 grader medurs från föregående.",
+    "info_palettes_create_gen": "Med hjälp av generatorfunktioner, där du bestämmer start och slutvärden för färgkanaler och kan använda kvadratiska kurvor för att bestämma hur kanalernas värden ska ändras mellan varje färg.",
+    "info_palettes_create_img": "Med hjälp av en bild: välj en bild, och KLR hämtar fem färger från den bilden som du kan spara som ett nytt färgschema",
+    "info_colors_title": "Färger",
+    "info_colors_intro": "Det finns två slags färger i KLRs färgscheman:",
+    "info_colors_palette_title": "Fasta färger",
+    "info_colors_palette": "Dessa kan ändras genom att peka på färgen i listan. I redigeringsfönstret som öppnas kan du, förutom att ändra färgen i sig, också ändra namn på färgen (eller använda ett automatiskt genererat namnförslag), lägga till en harmoni -- dvs låta KLR automatiskt generera ett antal färger med utgångspunkt från denna samt från olika färgharmoniska förhållanden",
+    "info_colors_generated_title": "Genererade färger",
+    "info_colors_generated": "Dessa är ett resultat av att lägga till harmonier till fasta färger. De kan identifieras genom att de är något minder i listan. De kan omvandlas till fast färger genom att markera dem i listan (med långtryck på en färg för att start selektion) och sedan trycka på uppåtpilen ovanför listan.",
+    "info_colors_helpers_intro": "I färgschemavyn finns också tre hjälpfunktioner:",
+    "info_colors_helpers_contrast": "Kontrastvyn, där du kan se kontrastförhållandet mellan varje färg och de andra. KLR ger också förslag på en ändring av de färger som inte når upp till WCAGs krav på kontrast -- här har KLR försökt att automatiskt göra färgen mörkare/ljusare.",
+    "info_colors_helpers_compare": "Diagramvyn, där du kan jämföra färgerna utifrån deras kanaler (ton, mättnad, ljus, luma), samt också simulera hur färgerna ser ut och förhåller sig till varandra för personer med diverse typer av färgblindhet",
+    "info_colors_helpers_css": "CSS-vyn, där du kan se färgerna som CSS-kod"
 }
